SvcRoute/redirect-https-mw.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https-mw
  namespace: traefik
spec:
  redirectScheme:
    scheme: https
    permanent: true
