SvcRoute/mu-agent.yml
apiVersion: v1
kind: Service
metadata:
  name: mu-agent-zyra-svc
  namespace: k3s-apps
spec:
  selector:
    app: mu-agent-zyra
  ports:
  - port: 80
    targetPort: 7990
---
apiVersion: v1
kind: Service
metadata:
  name: mu-agent-nami-svc
  namespace: k3s-apps
spec:
  selector:
    app: mu-agent-nami
  ports:
  - port: 80
    targetPort: 7990
