SvcRoute/mu-commander.yml
apiVersion: v1
kind: Service
metadata:
  name: mu-commander-svc
  namespace: k3s-apps
spec:
  selector:
    app: mu-commander
  ports:
  - port: 80
    targetPort: 7970
