SvcRoute/mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: k3s-apps
spec:
  ports:
  - port: 7306
    targetPort: 7306
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-svc
  namespace: k3s-apps
subsets:
  - addresses:
      - ip: 10.8.77.119
    ports:
      - port: 7306
