SvcRoute/redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: k3s-apps
spec:
  ports:
  - port: 7379
    targetPort: 7379
---
apiVersion: v1
kind: Endpoints
metadata:
  name: redis-svc
  namespace: k3s-apps
subsets:
  - addresses:
      - ip: 10.8.77.119
    ports:
      - port: 7379
