SvcRoute/grafana.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
  namespace: log-stack
spec:
  ports:
  - port: 80
    targetPort: 9898
---
apiVersion: v1
kind: Endpoints
metadata:
  name: grafana-svc
  namespace: log-stack
subsets:
  - addresses:
      - ip: 10.8.77.119
    ports:
      - port: 9898
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-route-http
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`grafana.memosa.cn`)
    kind: Rule
    middlewares:
    - name: redirect-https-mw
    services:
    - name: grafana-svc
      namespace: log-stack
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-route-https
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`grafana.memosa.cn`)
    kind: Rule
    services:
    - kind: Service
      name: grafana-svc
      namespace: log-stack
      port: 80
  tls:
    secretName: tls-memosa-cn
