SvcRoute/loki.yml
apiVersion: v1
kind: Service
metadata:
  name: loki-svc
  namespace: log-stack
spec:
  selector:
    app: loki
  ports:
  - port: 80
    targetPort: 3100
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: loki-route-http
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`loki.ops.memosa.cn`)
    kind: Rule
    services:
    - name: loki-svc
      namespace: log-stack
      port: 80
