SvcRoute/traefik.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-svc
  namespace: traefik
spec:
  selector:
    app: traefik
  type: LoadBalancer
  ports:
  - name: web
    port: 80
  - name: websecure
    port: 443
  - name: admin
    port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-route-http
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik.memosa.cn`)
    kind: Rule
    middlewares:
    - name: redirect-https-mw
    services:
    - name: traefik-svc
      namespace: traefik
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-route-https
  namespace: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`traefik.memosa.cn`)
    kind: Rule
    services:
    - name: traefik-svc
      namespace: traefik
      port: 8080
  tls:
    secretName: tls-memosa-cn
